// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`terminals-list-core displays an error state on failed data fetch 1`] = `
<terminals-list-core>
  <div class="table-wrapper" part="table-wrapper">
    <table class="table table-hover" part="table text color font-family background-color">
      <thead class="sticky-top table-head" part="table-head">
        <tr class="table-light text-nowrap" part="table-head-row text color font-family background-color">
          <th part="table-head-cell table-cell text color font-family background-color" scope="col" title="The nickname associated with the terminal">
            Nickname
          </th>
          <th part="table-head-cell table-cell text color font-family background-color" scope="col" title="The serial number of the terminal">
            Serial Number
          </th>
          <th part="table-head-cell table-cell text color font-family background-color" scope="col" title="The current status of each terminal">
            Status
          </th>
        </tr>
      </thead>
      <tbody class="table-body">
        <tr>
          <td class="error-state" colspan="3" data-test-id="table-error-state" part="table-error text color font-family background-color" style="text-align: center;">
            An unexpected error occurred: Fetch error
          </td>
        </tr>
      </tbody>
      <tfoot class="sticky-bottom" part="table-foot">
        <tr class="align-middle table-light" part="table-foot-row text color font-family background-color">
          <td colspan="3" part="table-foot-cell table-cell text color font-family background-color">
            <pagination-menu>
              <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                <ul class="m-0 pagination">
                  <li class="disabled page-item">
                    <button class="page-link" part="pagination-button-disabled button-disabled button text color font-family">
                      <span class="me-1" part="pagination-button-icon-previous pagination-button-icon text color font-family">
                        «
                      </span>
                      <span part="pagination-button-text text color font-family">
                        Previous
                      </span>
                    </button>
                  </li>
                  <li class="disabled page-item">
                    <button class="page-link" part="pagination-button-disabled button-disabled button text color font-family">
                      <span part="pagination-button-text text color font-family">
                        Next
                      </span>
                      <span class="ms-1" part="pagination-button-icon-next pagination-button-icon text color font-family">
                        »
                      </span>
                    </button>
                  </li>
                </ul>
              </nav>
            </pagination-menu>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</terminals-list-core>
`;

exports[`terminals-list-core renders properly with fetched data 1`] = `
<terminals-list-core>
  <div class="table-wrapper" part="table-wrapper">
    <table class="table table-hover" part="table text color font-family background-color">
      <thead class="sticky-top table-head" part="table-head">
        <tr class="table-light text-nowrap" part="table-head-row text color font-family background-color">
          <th part="table-head-cell table-cell text color font-family background-color" scope="col" title="The nickname associated with the terminal">
            Nickname
          </th>
          <th part="table-head-cell table-cell text color font-family background-color" scope="col" title="The serial number of the terminal">
            Serial Number
          </th>
          <th part="table-head-cell table-cell text color font-family background-color" scope="col" title="The current status of each terminal">
            Status
          </th>
        </tr>
      </thead>
      <tbody class="table-body">
        <tr data-row-entity-id="trm_43Y2lE9E2ULR8pvaKI6D5v" data-test-id="table-row" part="table-row text color font-family background-color">
          <td part="table-cell-odd table-cell text color font-family background-color">
            Terminal 1
          </td>
          <td part="table-cell-odd table-cell text color font-family background-color">
            453-760-515
          </td>
          <td part="table-cell-odd table-cell text color font-family background-color">
            <span class="badge bg-danger" part="badge font-family badge-danger" title="This terminal is disconnected">
              Disconnected
            </span>
          </td>
        </tr>
        <tr data-row-entity-id="trm_6TFOXK5U0LZLyQ6y6t3sbj" data-test-id="table-row" part="table-row text color font-family background-color">
          <td part="table-cell-even table-cell text color font-family background-color">
            Terminal 2
          </td>
          <td part="table-cell-even table-cell text color font-family background-color">
            807-075-625
          </td>
          <td part="table-cell-even table-cell text color font-family background-color">
            <span class="badge bg-danger" part="badge font-family badge-danger" title="This terminal is disconnected">
              Disconnected
            </span>
          </td>
        </tr>
        <tr data-row-entity-id="trm_F8UyFyXcaTBwSDh1cMxjc" data-test-id="table-row" part="table-row text color font-family background-color">
          <td part="table-cell-odd table-cell text color font-family background-color">
            Terminal 3
          </td>
          <td part="table-cell-odd table-cell text color font-family background-color">
            450-060-752
          </td>
          <td part="table-cell-odd table-cell text color font-family background-color">
            <span class="badge bg-success" part="badge font-family badge-success" title="This terminal is connected">
              Connected
            </span>
          </td>
        </tr>
        <tr data-row-entity-id="trm_2Z2lE9E2ULR8pvaKI6D5v" data-test-id="table-row" part="table-row text color font-family background-color">
          <td part="table-cell-even table-cell text color font-family background-color">
            Terminal 4
          </td>
          <td part="table-cell-even table-cell text color font-family background-color">
            453-760-515
          </td>
          <td part="table-cell-even table-cell text color font-family background-color">
            <span class="badge bg-warning" part="badge font-family badge-warning" title="This terminal is pending configuration">
              Pending configuration
            </span>
          </td>
        </tr>
        <tr data-row-entity-id="trm_6TFOXK5U0LZLyQ6y6t3sbj" data-test-id="table-row" part="table-row text color font-family background-color">
          <td part="table-cell-odd table-cell text color font-family background-color">
            Terminal 5
          </td>
          <td part="table-cell-odd table-cell text color font-family background-color">
            807-075-625
          </td>
          <td part="table-cell-odd table-cell text color font-family background-color">
            <span class="badge bg-warning" part="badge font-family badge-warning" title="This terminal is pending configuration">
              Pending configuration
            </span>
          </td>
        </tr>
        <tr data-row-entity-id="trm_F8UyFyXcaTBwSDh1cMxjc" data-test-id="table-row" part="table-row text color font-family background-color">
          <td part="table-cell-even table-cell text color font-family background-color">
            Terminal 6
          </td>
          <td part="table-cell-even table-cell text color font-family background-color">
            450-060-752
          </td>
          <td part="table-cell-even table-cell text color font-family background-color">
            <span class="badge bg-danger" part="badge font-family badge-danger" title="This terminal is disconnected">
              Disconnected
            </span>
          </td>
        </tr>
      </tbody>
      <tfoot class="sticky-bottom" part="table-foot">
        <tr class="align-middle table-light" part="table-foot-row text color font-family background-color">
          <td colspan="3" part="table-foot-cell table-cell text color font-family background-color">
            <pagination-menu>
              <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                <ul class="m-0 pagination">
                  <li class="disabled page-item">
                    <button class="page-link" part="pagination-button-disabled button-disabled button text color font-family">
                      <span class="me-1" part="pagination-button-icon-previous pagination-button-icon text color font-family">
                        «
                      </span>
                      <span part="pagination-button-text text color font-family">
                        Previous
                      </span>
                    </button>
                  </li>
                  <li class="disabled page-item">
                    <button class="page-link" part="pagination-button-disabled button-disabled button text color font-family">
                      <span part="pagination-button-text text color font-family">
                        Next
                      </span>
                      <span class="ms-1" part="pagination-button-icon-next pagination-button-icon text color font-family">
                        »
                      </span>
                    </button>
                  </li>
                </ul>
              </nav>
            </pagination-menu>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</terminals-list-core>
`;
